# asklio-demo

./: .gitignore  README.md  docker-compose.yml  plan.md  render.yaml
asklio-portal-main/: README.md  index.html  tailwind.config.ts
asklio-portal-main/src/components/: CreateRequestDialog.tsx  KanbanBoard.tsx  PDFDropZone.tsx  RequestDetailsDialog.tsx  RequestForm.tsx
asklio-portal-main/src/lib/: api.ts  validation.ts
asklio-portal-main/src/pages/: Index.tsx
asklio-portal-main/src/types/: request.ts
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py  init_db.py  models.py  schemas.py
backend/app/api/: commodity_groups.py  requests.py
backend/app/services/: commodity_classifier.py  pdf_extractor.py  profiler.py  request_service.py
backend/tests/: report.html  test_all_pdfs.py  test_extraction.py  test_pdf_extraction.py  test_pdf_extraction_detailed.py  test_pdf_extraction_summary.py
backend/tests/output/: AN-4120-Kdnr-14918_tesseract.txt
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: CreateRequestDialog.tsx  KanbanBoard.tsx  PDFDropZone.tsx  PDFUpload.tsx  RequestDetail.tsx  RequestDetailsDialog.tsx  RequestForm.tsx  RequestsKanban.tsx  RequestsTable.tsx  StatsCard.tsx
frontend/src/lib/: api.ts  currency.ts  validation.ts
frontend/src/types/: request.ts
task/: README.md
